--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,14 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
+    <distributionManagement>
+        <repository>
+            <id>youngNexus</id>
+            <url>http://47.106.119.128:18081/repository/maven-releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>youngNexus</id>
+            <url>http://47.106.119.128:18081/repository/maven-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
